# CS-410

./: .gitignore  CMakeLists.txt  README.txt  driver00.txt  driver01.ppm  driver01.txt  driver02.ppm  driver02.txt  fence.mtl  hand.mtl  mycube.mtl  mysphere.mtl  raytracer.cpp  render.cpp  scene1.txt  scene1_512x512.ppm  scene2.txt  scene2_128x128.ppm  skybox.mtl
include/: DriverHandler.h  Face.h  Material.h  Object.h  Ray.h  Scene.h  Sphere.h  Vertex.h
scripts/: tarme.sh
src/: CMakeLists.txt  DriverHandler.cpp  Face.cpp  Material.cpp  Object.cpp  Scene.cpp  Sphere.cpp  Vertex.cpp
